# log4cpp_pack

./: CMakeLists.txt  README.md  log4cpp.conf  main.cpp
lib/: CMakeLists.txt  log4lib.cpp  log4lib.h
